# app_fastapi

./: .gitignore  pyproject.toml
app/api/: router.py
app/tests/: test_app.py
